# yahtzee

./: .gitignore  Makefile.am  Makefile.in  README  admin.c  book.c  comp.c  configure  configure.ac  eval.c  help.c  main.c  oldtmp.h  port.h  score.c  scr.c  tmp.h  yahtzee.6  yahtzee.shar  yz_consts.h  yz_costs.h  yz_funcs.h  yz_macros.h  yz_types.h
